--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,16 @@
   <%= gravatar_for @user %>
   <%= @user.name %>
 </h1>
+
+<div class="panel panel-info">
+    <div class="panel-heading">Introduction</div>
+    <div class="panel-body">
+        <%= @user.introduction %>
+    </div>
+</div>
+<div class="panel panel-info">
+    <div class="panel-heading">Email</div>
+    <div class="panel-body">
+        <%= @user.email %>
+    </div>
+</div>
