--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -137,6 +137,16 @@ aside {
   float: left;
   margin-right: 10px;
 }
+.align-center {
+  margin: 0 auto;  
+}
+
+.edit_profile{
+  text-align: center;
+  margin-top: -20px;
+}
+
+
 /* microposts */
 
 .microposts {
@@ -174,5 +184,56 @@ aside {
   textarea {
     height: 100px;
     margin-bottom: 5px;
+  }
+}
+
+.profile-status-link a{
+  color: gray; 
+  font-size: 0.8em; 
+  text-decoration:none!important;
+}
+
+section #row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/* users */
+
+.user_information {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+  .user {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .timestamp {
+    color: $gray-light;
+    display: block;
+    margin-left: 60px;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+}
+
+.emphasis {
+    font-weight: bold;
+    color: #000;
+    border-bottom: medium solid blue;
+}
+
+
+.link_box :hover{
+  text-decoration:none!important;
+  border-bottom: medium solid red;
+  * { 
+   border-bottom: 0;
   }
 }
